--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,11 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">39,933</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">13,712</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">Web_Automation_TestCases.Ecomm_SubmittOrderTest</td><td><a href="#m0">verifyOrderHistoryTest</a></td><td rowspan="1">1757071578264</td><td rowspan="1">3587</td></tr><tr class="passedeven"><td><a href="#m1">verifySubmitOrderTest</a></td><td rowspan="1">1757071561515</td><td rowspan="1">16738</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Backend_Automation_TestCases.Rest_Ecom_Api_Test</td><td><a href="#m0">ecomerceApiAutomation</a></td><td rowspan="1">1760601106338</td><td rowspan="1">13548</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">Web_Automation_TestCases.Ecomm_SubmittOrderTest#verifyOrderHistoryTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">Web_Automation_TestCases.Ecomm_SubmittOrderTest#verifySubmitOrderTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">Backend_Automation_TestCases.Rest_Ecom_Api_Test#ecomerceApiAutomation</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
