--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\shara\AppData\Local\Temp\testng-eclipse--128345843\testng-customsuite.xml</span>
+                    <span>C:\Users\shara\AppData\Local\Temp\testng-eclipse--373464096\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,12 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Web_Automation_TestCases.Ecomm_SubmittOrderTest" class="method navigator-link" hash-for-method="verifyOrderHistoryTest">verifyOrderHistoryTest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Web_Automation_TestCases.Ecomm_SubmittOrderTest" class="method navigator-link" hash-for-method="verifySubmitOrderTest">verifySubmitOrderTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="Backend_Automation_TestCases.Rest_Ecom_Api_Test" class="method navigator-link" hash-for-method="ecomerceApiAutomation">ecomerceApiAutomation</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -126,21 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">Web_Automation_TestCases.Ecomm_SubmittOrderTest</span>
+              <span class="class-name">Backend_Automation_TestCases.Rest_Ecom_Api_Test</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyOrderHistoryTest">
-                  </a> <!-- verifyOrderHistoryTest -->
-                  <span class="method-name">verifyOrderHistoryTest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifySubmitOrderTest">
-                  </a> <!-- verifySubmitOrderTest -->
-                  <span class="method-name">verifySubmitOrderTest</span>
+                  <a name="ecomerceApiAutomation">
+                  </a> <!-- ecomerceApiAutomation -->
+                  <span class="method-name">ecomerceApiAutomation</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -148,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\shara\AppData\Local\Temp\testng-eclipse--128345843\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\shara\AppData\Local\Temp\testng-eclipse--373464096\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -157,7 +145,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;Web_Automation_TestCases.Ecomm_SubmittOrderTest&quot;/&gt;
+      &lt;class name=&quot;Backend_Automation_TestCases.Rest_Ecom_Api_Test&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -197,20 +185,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verifySubmitOrderTest')
-data.setCell(0, 2, 'Web_Automation_TestCases.Ecomm_SubmittOrderTest')
-data.setCell(0, 3, 16738);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'verifyOrderHistoryTest')
-data.setCell(1, 2, 'Web_Automation_TestCases.Ecomm_SubmittOrderTest')
-data.setCell(1, 3, 3587);
+data.setCell(0, 1, 'ecomerceApiAutomation')
+data.setCell(0, 2, 'Backend_Automation_TestCases.Rest_Ecom_Api_Test')
+data.setCell(0, 3, 13548);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 20 seconds</span>
+              <span class="suite-total-time">Total running time: 13 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -236,23 +220,11 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">Web_Automation_TestCases.Ecomm_SubmittOrderTest</div> <!-- chronological-class-name -->
-              <div class="configuration-class before">
-                <span class="method-name">setup</span>
+              <div class="chronological-class-name">Backend_Automation_TestCases.Rest_Ecom_Api_Test</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">ecomerceApiAutomation</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- configuration-class before -->
-              <div class="test-method">
-                <span class="method-name">verifySubmitOrderTest</span>
-                <span class="method-start">13084 ms</span>
               </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">verifyOrderHistoryTest</span>
-                <span class="method-start">29833 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-class after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">33423 ms</span>
-              </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
