--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\shara\AppData\Local\Temp\testng-eclipse--373464096\testng-customsuite.xml</span>
+                    <span>C:\Users\shara\AppData\Local\Temp\testng-eclipse-1350787036\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Backend_Automation_TestCases.Rest_Ecom_Api_Test" class="method navigator-link" hash-for-method="ecomerceApiAutomation">ecomerceApiAutomation</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="RestAssuredPractice.DesrilaizeTestTest" class="method navigator-link" hash-for-method="oTest">oTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">Backend_Automation_TestCases.Rest_Ecom_Api_Test</span>
+              <span class="class-name">RestAssuredPractice.DesrilaizeTestTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="ecomerceApiAutomation">
-                  </a> <!-- ecomerceApiAutomation -->
-                  <span class="method-name">ecomerceApiAutomation</span>
+                  <a name="oTest">
+                  </a> <!-- oTest -->
+                  <span class="method-name">oTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\shara\AppData\Local\Temp\testng-eclipse--373464096\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\shara\AppData\Local\Temp\testng-eclipse-1350787036\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,7 +145,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;Backend_Automation_TestCases.Rest_Ecom_Api_Test&quot;/&gt;
+      &lt;class name=&quot;RestAssuredPractice.DesrilaizeTestTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -187,14 +187,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'ecomerceApiAutomation')
-data.setCell(0, 2, 'Backend_Automation_TestCases.Rest_Ecom_Api_Test')
-data.setCell(0, 3, 13548);
+data.setCell(0, 1, 'oTest')
+data.setCell(0, 2, 'RestAssuredPractice.DesrilaizeTestTest')
+data.setCell(0, 3, 3113);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 13 seconds</span>
+              <span class="suite-total-time">Total running time: 3 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -220,9 +220,9 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">Backend_Automation_TestCases.Rest_Ecom_Api_Test</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">RestAssuredPractice.DesrilaizeTestTest</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">ecomerceApiAutomation</span>
+                <span class="method-name">oTest</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
